--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "canadabot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./src/index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/bolt": "^1.7.0",
-    "discord.js": "^12.0.2"
+    "@slack/bolt": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "ngrok": "^3.2.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.4",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
